--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.3.1",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-virtuoso": "^4.18.1",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
