--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
+    "motion": "^12.34.0",
     "next": "^15.5.12",
     "next-intl": "^3.26.5",
     "next-themes": "^0.4.3",
