--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "motion": "^12.34.0",
+    "nanoid": "^5.1.6",
     "next": "^15.5.12",
     "next-intl": "^3.26.5",
     "next-themes": "^0.4.3",
@@ -27,6 +28,7 @@
     "react-textarea-autosize": "^8.5.6",
     "react-virtuoso": "^4.12.0",
     "remark-gfm": "^4.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
