--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
-# WARNING: Demo mode sends OpenRouter requests directly from the browser and exposes the API key to end users.
-# WARNING: Use ONLY for demo/testing. Remove before real production deployment.
-NEXT_PUBLIC_DEMO_MODE=true
-NEXT_PUBLIC_OPENROUTER_API_KEY=sk-or-...
+# Optional demo mode (browser-direct OpenRouter). Keep false for secure default behavior.
+NEXT_PUBLIC_DEMO_MODE=false
+
+# Required for server-side BFF proxy to OpenRouter
+OPENROUTER_API_KEY=sk-or-...
 
 # Optional OpenRouter settings
-NEXT_PUBLIC_OPENROUTER_DEFAULT_MODEL=openai/gpt-4o-mini
-NEXT_PUBLIC_OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
-NEXT_PUBLIC_OPENROUTER_SITE_URL=http://localhost:3000
-NEXT_PUBLIC_OPENROUTER_APP_NAME=AI Interface
+OPENROUTER_DEFAULT_MODEL=openai/gpt-4o-mini
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_SITE_URL=http://localhost:3000
+OPENROUTER_APP_NAME=AI Interface
 
-# Existing backend base URL for chat CRUD endpoints (if used)
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
+# Optional. If omitted, chat CRUD requests use same-origin BFF routes (/api/app/chats/*)
+NEXT_PUBLIC_API_BASE_URL=
