Implement backend BFF integration and auth/chat alignment

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ OPENROUTER_APP_NAME=AI Interface
 
 # Optional. If omitted, chat CRUD requests use same-origin BFF routes (/api/app/chats/*)
 NEXT_PUBLIC_API_BASE_URL=
+
+BACKEND_ORIGIN=http://<domain_or_ip>
+UNIVERSITY_EMAIL_DOMAINS=sbu.ac.ir,student.sbu.ac.ir,mail.sbu.ac.ir
+STUDENT_ID_EMAIL_TEMPLATE={id}@student.sbu.ac.ir
